fixed card spacing

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -39,6 +39,7 @@
   display: grid;
   grid-template-columns: repeat(20, 1fr);
   column-gap: 2rem;
+  row-gap: 2rem;
   padding-bottom: 48px;
   min-width: 100%;
 }
@@ -222,7 +223,8 @@
 @media (width <= 900px) {
   .cards.icon > ul {
     grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 1rem;
+    column-gap: 1rem;
+    row-gap: 0;
     width: 100%;
   }
 
